feat: add swagger to some routers but not all.
