# handler/user/update.go
@@ -1,47 +1,0 @@
-package user
-
-import (
-	. "Jinshuzhai-Bookstore/handler"
-	"Jinshuzhai-Bookstore/model"
-	"Jinshuzhai-Bookstore/pkg/berror"
-	"github.com/gin-gonic/gin"
-	"strconv"
-)
-
-func Update(c *gin.Context) {
-	// Get the user id from the url parameter.
-	userId, _ := strconv.Atoi(c.Param("id"))
-
-	// Binding the user data.
-	var u model.UserModel
-
-	u.Role = "general"
-
-	if err := c.Bind(&u); err != nil {
-		SendResponse(c, berror.ErrBind, nil)
-		return
-	}
-
-	// We update the record based on the user id.
-	u.ID = uint64(userId)
-
-	// Validate the data.
-	if err := u.Validate(); err != nil {
-		SendResponse(c, berror.ErrValidation, nil)
-		return
-	}
-
-	// Encrypt the user password.
-	if err := u.Encrypt(); err != nil {
-		SendResponse(c, berror.ErrEncrypt, nil)
-		return
-	}
-
-	// Save changed fields.
-	if err := u.Update(); err != nil {
-		SendResponse(c, berror.ErrDatabase, nil)
-		return
-	}
-
-	SendResponse(c, nil, nil)
-}
